# dealerpulse-elasticsearch-agents

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  start-all.sh
DevOps/Local/: README.md  docker-all-destroy.sh  docker-all-down.sh  docker-all-status.sh  docker-all-up.sh
DevOps/Local/n8n/: docker-compose.yml
agents/: base_agent.py  consumer_agent.py  inventory_agent.py  orchestrator.py  sales_agent.py  service_agent.py
config/: __init__.py  es_config.py  llm_config.py  settings.py
data/mappings/: index_mappings.py
data/synthetic/: generate_all.py
dealerpulse/: api.py  cli.py  scenarios.py
dealerpulse_v2/: api_v2.py  kibana_client.py  registry_loader.py
portals/dealersense-admin/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
portals/dealersense-app/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
registry/agents/: 001-consumer-agent.json  002-sales-agent.json  003-service-agent.json  004-inventory-agent.json  005-orchestrator.json
registry/scenarios/: 001-instant-lead-response.json  002-morning-sales-brief.json  003-diagnose-before-hood.json  004-aging-stock-alert.json  005-lead-inventory-match.json  006-service-sales-opportunity.json  007-full-morning-briefing.json
registry/tools/: 001-search-inventory.json  002-active-leads.json  003-tsb-lookup.json  004-service-history.json  005-aging-stock.json  006-pricing-alerts.json  007-active-incentives.json
scripts/: load_data.py
tools/: es_esql.py  es_search.py  es_workflow.py
(+64 files in other folders)
